updates docs as per gobblin.sh changes + some more improvements in gobblin.sh